# Heuristic-based

maliciousbutnodef/: VISUAL_GUIDE.md  pyproject.toml
maliciousbutnodef/logs/30 percent malicious/: confusion_round_001.csv  confusion_round_002.csv  confusion_round_003.csv  confusion_round_004.csv  confusion_round_005.csv  confusion_round_006.csv  confusion_round_007.csv  confusion_round_008.csv  confusion_round_009.csv  confusion_round_010.csv  confusion_round_011.csv  confusion_round_012.csv  confusion_round_013.csv  confusion_round_014.csv  confusion_round_015.csv  confusion_round_016.csv  confusion_round_017.csv  confusion_round_018.csv  confusion_round_019.csv  confusion_round_020.csv  confusion_round_021.csv  confusion_round_022.csv  confusion_round_023.csv  confusion_round_024.csv  confusion_round_025.csv  confusion_round_026.csv  confusion_round_027.csv  confusion_round_028.csv  confusion_round_029.csv  confusion_round_030.csv  confusion_round_031.csv  confusion_round_032.csv  confusion_round_033.csv  confusion_round_034.csv  confusion_round_035.csv  confusion_round_036.csv  confusion_round_037.csv  confusion_round_038.csv  confusion_round_039.csv  confusion_round_040.csv  (+112 more)
maliciousbutnodef/logs/50 percent malicious/: confusion_round_001.csv  confusion_round_002.csv  confusion_round_003.csv  confusion_round_004.csv  confusion_round_005.csv  confusion_round_006.csv  confusion_round_007.csv  confusion_round_008.csv  confusion_round_009.csv  confusion_round_010.csv  confusion_round_011.csv  confusion_round_012.csv  confusion_round_013.csv  confusion_round_014.csv  confusion_round_015.csv  confusion_round_016.csv  confusion_round_017.csv  confusion_round_018.csv  confusion_round_019.csv  confusion_round_020.csv  confusion_round_021.csv  (+131 more)
maliciousbutnodef/trial/: __init__.py  analysis.py  backdoor_utils.py  client_app.py  server_app.py  task.py
(+6 files in other folders)
